# career_coach-crewai-

./: README.md  pyproject.toml
src/career_coach/: crew.py  main.py
src/career_coach/config/: agents.yaml  tasks.yaml
