[project]
name = "career_coach"
version = "0.1.0"
description = "career_coach using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
career_coach = "career_coach.main:run"
run_crew = "career_coach.main:run"
train = "career_coach.main:train"
replay = "career_coach.main:replay"
test = "career_coach.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
